--- a/uslugi/uslugi-style.css
+++ b/uslugi/uslugi-style.css
@@ -6,11 +6,17 @@
 
 html {
     font-size: 10px;
+    overflow-x: hidden;
+    width: 100vw;
+    max-width: 100vw;
 }
 
 body {
     font-family: 'Montserrat', sans-serif;
+}
 
+.wrapper {
+    min-height: 100vh;
 }
 
 header {
@@ -115,7 +121,7 @@ button i {
 
 }
 
-body>button>a {
+body>.wrapper>button>a {
     position: absolute;
     top: 0px;
     bottom: 0px;
@@ -139,6 +145,8 @@ footer {
     color: rgb(252, 197, 80);
     text-align: center;
     letter-spacing: 1.2px;
+    width: 100vw;
+    max-width: 100vw;
 
 }
 
@@ -172,7 +180,7 @@ body>footer>p:nth-child(1)>a {
 
     .description,
     .price-list {
-        padding: 2.5vw;
+        margin: 2.5vw;
     }
 
     .wiki {
